--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,106 @@
 
 /* LAYOUT CLASSES */
 
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 30px 0;
+}
+
+.sm-container{
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 30px 0;
+}
+
+.row{
+    display: flex;
+    flex-wrap: wrap;
+}
+
 
 /* UTILITY CLASSES */
 
+.d-flex{
+    display: flex;
+}
+
+.justify-between{
+    justify-content: space-between;
+}
+
+.bg-blue{
+    background-color: #0084fd;
+}
+
+.bg-lightblue{
+    background-color: #b5ddff;
+}
+
+.bg-violet{
+    background-color: #9792e4;
+}
+
+.bg-white{
+    background-color: white;
+}
+
+.bg-red{
+    background-color: red;
+}
+
+.bg-gray{
+    background-color: #333333;
+}
+
+.height-400{
+    height: 400px;
+}
+
+.height-600{
+    height: 600px;
+}
+
+.height-800{
+    height: 800px;
+}
+
+.height-2000{
+    height: 2000px;
+}
+
+.pd-y-30{
+    padding: 30px 0;
+}
 
 /* GENERAL CLASSES */
+
+#jumbotron .big-col,
+#jumbotron .col,
+#planning .col,
+#testimonials .col,
+#benefits .col,
+#about .col,
+#get-started .col,
+footer .col{
+    width: 100%;
+    margin: 15px 30px;
+    border-radius: 20px;
+}
+
+#jumbotron .big-col,
+#testimonials .col{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#jumbotron .testo,
+#jumbotron .img,
+#planning .strategic-plan,
+#planning .app-development,
+#testimonials .img,
+#testimonials .testo{
+    width: 95%;
+    margin: 20px;
+}
