--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+
 /* LAYOUT CLASSES */
 
 .container{
@@ -78,12 +79,14 @@
     padding: 30px 0;
 }
 
+
 /* GENERAL CLASSES */
 
 #jumbotron .big-col,
 #jumbotron .col,
 #planning .col,
 #testimonials .col,
+#benefits .col-title,
 #benefits .col,
 #about .col,
 #get-started .col,
@@ -108,4 +111,46 @@ footer .col{
 #testimonials .testo{
     width: 95%;
     margin: 20px;
+}
+
+
+/* RESPONSIVE */
+
+@media screen and (min-width: 480px){
+    
+    #jumbotron .big-col,
+    #testimonials .col,
+    #benefits .col,
+    #about .row{
+        flex-wrap: nowrap;
+    }
+
+    #jumbotron .big-col{
+        width: calc(100% / 3 * 2 - 60px);
+    }
+
+    #jumbotron .col{
+        width: calc(100% / 3 - 60px);
+    }
+
+    #testimonials .img{
+        width: 30%;
+    }
+
+    #testimonials .testo{
+        width: 70%;
+    }
+
+    #benefits .col{
+        width: calc(50% - 60px);
+    }
+
+    #about .testo{
+        width: 60%;
+    }
+
+    #about .img{
+        width: 40%;
+    }
+
 }
