--- a/css/style.css
+++ b/css/style.css
@@ -79,8 +79,16 @@
     padding: 30px 0;
 }
 
+.ps-relative{
+    position: relative;
+}
+
 
 /* GENERAL CLASSES */
+
+header .menu-desktop{
+    display: none;
+}
 
 #jumbotron .big-col,
 #jumbotron .col,
@@ -153,4 +161,30 @@ footer .col{
         width: 40%;
     }
 
+}
+
+@media screen and (min-width: 768px){
+
+    header .menu-desktop{
+        display: block;
+    }
+
+    header .menu-mobile{
+        display: none;
+    }
+
+    #planning .col{
+        flex-wrap: nowrap;
+        width: calc(50% - 60px);
+    }
+
+    #planning .col:nth-child(2){
+        position: absolute;
+        bottom: 0;
+        right: 0;
+    }
+
+    #benefits .col{
+        width: calc(100% / 3 - 60px);
+    }
 }
