--- a/css/style.css
+++ b/css/style.css
@@ -37,11 +37,19 @@
     justify-content: space-between;
 }
 
+.justify-center{
+    justify-content: center;
+}
+
+.justify-left{
+    justify-content: left;
+}
+
 .align-center{
     align-items: center;
 }
 
-.align-end{
+.self-end{
     align-self: flex-end;
 }
 
@@ -50,7 +58,6 @@ img{
 }
 
 .btn{
-    padding: 10px 20px;
     border-radius: 20px;
     border: none;
 }
@@ -110,17 +117,6 @@ img{
 
 /* GENERAL CLASSES */
 
-/*Header*/
-
-header .menu-desktop{
-    display: none;
-}
-
-header .menu-mobile{
-    color: white;
-    font-size: 28px;
-}
-
 #jumbotron .big-col,
 #jumbotron .col,
 #planning .col,
@@ -152,17 +148,71 @@ footer .col{
     margin: 20px;
 }
 
+/*Header*/
+
+header .menu-desktop{
+    display: none;
+}
+
+header .menu-mobile{
+    color: white;
+    font-size: 28px;
+}
+
+/*Jumbotron*/
+
+#jumbotron h3{
+    color: #0084fd;
+    font-size: 28px;
+    margin: 25px 20px;
+}
+
+#jumbotron p{
+    font-size: 20px;
+    line-height: 28px;
+    margin: 5px 20px;
+}
+
+#jumbotron button{
+    background-color: #0084fd;
+    color: white;
+    font-size: 22px;
+    padding: 10px 40px;
+    margin: 30px 0 40px 20px;
+}
+
+#jumbotron .img{
+    width: 60%;
+}
+
+#jumbotron .col i{
+    color: #0084fd;
+    font-size: 70px;
+    margin: 20px 0;
+}
+
+#jumbotron .col{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.col p{
+    text-align: center;
+    padding-bottom: 40px;
+}
 
 /* RESPONSIVE */
 
 @media screen and (min-width: 768px){
     
-    #jumbotron .big-col,
     #testimonials .col,
     #benefits .col,
     #about .row{
         flex-wrap: nowrap;
     }
+
+    /*Jumbotron*/
 
     #jumbotron .big-col{
         width: calc(100% / 3 * 2 - 60px);
@@ -170,6 +220,16 @@ footer .col{
 
     #jumbotron .col{
         width: calc(100% / 3 - 60px);
+    }
+
+    #jumbotron .img{
+        display: flex;
+        justify-content: left;
+        width: 90%;
+    }
+
+    #jumbotron img{
+        width: 60%;
     }
 
     #testimonials .img{
@@ -217,6 +277,16 @@ footer .col{
     header button{
         margin-left: 10px;
         font-size: 19px;
+        padding: 10px 20px;
+    }
+
+    /*Jumbotron*/
+    #jumbotron .big-col{
+        flex-wrap: nowrap;
+    }
+
+    #jumbotron img{
+        width: 100%;
     }
 
     #planning .col{
