--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,13 @@ img{
 footer .col{
     width: 100%;
     margin: 15px 30px;
+}
+
+#jumbotron .big-col,
+#jumbotron .col,
+#planning .col,
+#testimonials .col,
+#benefits .col{
     border-radius: 20px;
 }
 
@@ -148,6 +155,36 @@ footer .col{
     margin: 20px;
 }
 
+#jumbotron p,
+#planning p{
+    font-size: 20px;
+    line-height: 28px;
+    margin: 5px 20px;
+}
+
+h3{
+    font-size: 32px;
+    margin: 60px 0 40px 20px;
+}
+
+h4{
+    font-size: 28px;
+    margin: 25px 20px;
+}
+
+#jumbotron .col,
+#planning .app-development{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#jumbotron .col p,
+#planning .app-development p{
+    text-align: center;
+    padding-bottom: 40px;
+}
+
 /*Header*/
 
 header .menu-desktop{
@@ -161,16 +198,8 @@ header .menu-mobile{
 
 /*Jumbotron*/
 
-#jumbotron h3{
+#jumbotron h4{
     color: #0084fd;
-    font-size: 28px;
-    margin: 25px 20px;
-}
-
-#jumbotron p{
-    font-size: 20px;
-    line-height: 28px;
-    margin: 5px 20px;
 }
 
 #jumbotron button{
@@ -191,15 +220,28 @@ header .menu-mobile{
     margin: 20px 0;
 }
 
-#jumbotron .col{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+/*Planning*/
+
+#planning h3, 
+.strategic-planning p{
+    color: white;
+    margin-bottom: 40px;
 }
 
-.col p{
-    text-align: center;
-    padding-bottom: 40px;
+#planning button{
+    background-color: #9792e4;
+    padding: 22px 25px;
+    border-radius: 40px;
+    font-size: 20px;
+}
+
+#planning .app-development img{
+    width: 60%;
+}
+
+#planning .strategic-planning p{
+    padding-top: 20px;
+    padding-bottom: 30px;
 }
 
 /* RESPONSIVE */
@@ -281,6 +323,7 @@ header .menu-mobile{
     }
 
     /*Jumbotron*/
+
     #jumbotron .big-col{
         flex-wrap: nowrap;
     }
@@ -296,5 +339,12 @@ header .menu-mobile{
 
     #benefits .col{
         width: calc(100% / 3 - 60px);
+    }
+
+    /*Planning*/
+
+    #planning .strategic-planning img{
+        padding-top: 50px;
+        padding-bottom: 60px;
     }
 }
