--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,8 @@ footer .col{
 }
 
 #jumbotron p,
-#planning p{
+#planning p,
+#testimonials p{
     font-size: 20px;
     line-height: 28px;
     margin: 5px 20px;
@@ -164,7 +165,7 @@ footer .col{
 
 h3{
     font-size: 32px;
-    margin: 60px 0 40px 20px;
+    margin: 40px 20px;
 }
 
 h4{
@@ -173,16 +174,19 @@ h4{
 }
 
 #jumbotron .col,
-#planning .app-development{
+#planning .app-development,
+#testimonials .testimonials-intro{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 #jumbotron .col p,
-#planning .app-development p{
+#planning .app-development p,
+.testimonials-intro,
+#testimonials p{
     text-align: center;
-    padding-bottom: 40px;
+    padding-bottom: 30px;
 }
 
 /*Header*/
@@ -244,6 +248,26 @@ header .menu-mobile{
     padding-bottom: 30px;
 }
 
+/*Testimonials*/
+
+#testimonials h3{
+    color: #9792e4;
+}
+
+#testimonials .img{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+}
+
+#testimonials img{
+    border-radius: 50%;
+}
+
+#testimonials .testo p{
+    color: white;
+}
+
 /* RESPONSIVE */
 
 @media screen and (min-width: 768px){
@@ -274,12 +298,18 @@ header .menu-mobile{
         width: 60%;
     }
 
+    /*Testimonials*/
+
     #testimonials .img{
         width: 30%;
     }
 
     #testimonials .testo{
         width: 70%;
+    }
+
+    #testimonials .testo p{
+        text-align: left;
     }
 
     #benefits .col{
