--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,8 @@ footer .col{
 #planning p,
 #testimonials p,
 #benefits p,
-#about p{
+#about p,
+#get-started p{
     font-size: 20px;
     line-height: 28px;
     margin: 5px 20px;
@@ -166,7 +167,7 @@ h2{
 
 h3{
     font-size: 34px;
-    margin: 40px 20px;
+    margin: 30px 20px;
 }
 
 h4{
@@ -186,7 +187,8 @@ h4{
 #planning .app-development p,
 .testimonials-intro,
 #testimonials p,
-#benefits h3{
+#benefits h3,
+#get-started p{
     text-align: center;
     padding-bottom: 30px;
 }
@@ -211,6 +213,11 @@ h4{
     font-size: 20px;
     padding: 10px 50px;
     margin: 20px;
+}
+
+#testimonials h3,
+#get-started h3{
+    margin: 0;
 }
 
 /*Header*/
@@ -304,6 +311,37 @@ header .menu-mobile{
 #about .img{
     width: 50%;
     margin-top: 30px;
+}
+
+/*Get started*/
+
+#get-started .col{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+}
+
+#get-started .free{
+    color: #fdc15f;
+    font-size: 65px;
+    margin-top: 0;
+}
+
+#get-started button{
+    background-color: white;
+    color: #9792e4;
+    padding: 15px 40px;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+#get-started i{
+    font-size: 8px;
+}
+
+#get-started .small{
+    font-size: 18px;
 }
 
 /* RESPONSIVE */
@@ -421,6 +459,17 @@ header .menu-mobile{
         width: 100%;
     }
 
+    /*Planning*/
+
+    #planning .row{
+        padding: 0 80px;
+    }
+
+    #planning .strategic-planning img{
+        padding-top: 50px;
+        padding-bottom: 60px;
+    }
+
     #planning .col{
         flex-wrap: nowrap;
         width: calc(50% - 60px);
@@ -430,10 +479,4 @@ header .menu-mobile{
         width: calc(100% / 3 - 60px);
     }
 
-    /*Planning*/
-
-    #planning .strategic-planning img{
-        padding-top: 50px;
-        padding-bottom: 60px;
-    }
 }
