--- a/css/style.css
+++ b/css/style.css
@@ -71,29 +71,8 @@ img{
 .bg-white{
     background-color: white;
 }
-
-.bg-red{
-    background-color: red;
-}
-
 .bg-gray{
     background-color: #333333;
-}
-
-.height-400{
-    height: 400px;
-}
-
-.height-600{
-    height: 600px;
-}
-
-.height-800{
-    height: 800px;
-}
-
-.height-2000{
-    height: 2000px;
 }
 
 .pd-y-30{
@@ -102,10 +81,6 @@ img{
 
 .pd-x-60{
     padding: 0 60px;
-}
-
-.ps-relative{
-    position: relative;
 }
 
 
@@ -177,7 +152,8 @@ h4{
 
 #jumbotron .col,
 #planning .app-development,
-#testimonials .testimonials-intro{
+#testimonials .testimonials-intro,
+#get-started .col{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -202,7 +178,8 @@ h4{
 }
 
 #testimonials .col-testo p,
-#benefits h3{
+#benefits h3,
+#get-started .col{
     color: white;
 }
 
@@ -315,13 +292,6 @@ header .menu-mobile{
 
 /*Get started*/
 
-#get-started .col{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: white;
-}
-
 #get-started .free{
     color: #fdc15f;
     font-size: 65px;
@@ -342,6 +312,20 @@ header .menu-mobile{
 
 #get-started .small{
     font-size: 18px;
+}
+
+/*Footer*/
+
+footer p{
+    margin: 20px;
+    color: white;
+    font-size: 20px;
+    text-align: center;
+}
+
+.violet{
+    color: #9792e4;
+    text-decoration: underline;
 }
 
 /* RESPONSIVE */
@@ -411,7 +395,7 @@ header .menu-mobile{
 @media screen and (min-width: 992px){
     
     .sm-container{
-        max-width: 960px;
+        max-width: 800px;
         margin: 0 auto;
         padding: 30px 0;
     }
